feat: 将pdf保存为图片

--- a/scripts/merge.ipynb
+++ b/scripts/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "source = os.path.abspath(os.path.join('..', 'assets', 'original'))\n",
     "target = os.path.abspath(os.path.join('..', 'assets', 'merged'))\n",
     "\n",
-    "slides = [2]\n",
+    "slides = [1, 2, 3, 4, 5, 6, 9, 10]\n",
     "\n",
     "for slide_id in slides:\n",
     "    input_file = os.path.join(source, '%02d.pdf' % slide_id)\n",
