docs: 添加部分第四讲笔记

--- a/scripts/pdf2img.ipynb
+++ b/scripts/pdf2img.ipynb
@@ -2,168 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import os\n",
     "import sys\n",
     "import fitz\n",
     "\n",
-    "from utils import extract_images\n"
+    "\n",
+    "from utils import extract_images\n",
+    "\n",
+    "flatten = lambda x: [y for l in x for y in flatten(l)] if type(x) is list else [x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "正在处理 PDF: 'e:\\Courses\\multimedia\\assets\\merged/02.pdf', 共 8 页...\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0001.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0002.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0003.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0004.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0005.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0006.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0007.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0008.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0009.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0010.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0011.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0012.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0013.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0014.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0015.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0016.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0017.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0018.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0019.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0020.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0021.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0022.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0023.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0024.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0025.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0026.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0027.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0028.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0029.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0030.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0031.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0032.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0033.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0034.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0035.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0036.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0037.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0038.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0039.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0040.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0041.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0042.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0043.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0044.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0045.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0046.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0047.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0048.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0049.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0050.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0051.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0052.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0053.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0054.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0055.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0056.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0057.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0058.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0059.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0060.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0061.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0062.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0063.jpg' (尺寸: 983x677 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\merged-02\\0064.jpg' (尺寸: 984x677 px, DPI: 100)\n",
-      "所有页面处理完成。\n",
-      "正在处理 PDF: 'e:\\Courses\\multimedia\\assets\\translated/02.pdf', 共 8 页...\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0001.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0002.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0003.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0004.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0005.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0006.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0007.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0008.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0009.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0010.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0011.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0012.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0013.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0014.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0015.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0016.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0017.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0018.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0019.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0020.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0021.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0022.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0023.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0024.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0025.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0026.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0027.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0028.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0029.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0030.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0031.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0032.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0033.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0034.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0035.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0036.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0037.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0038.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0039.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0040.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0041.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0042.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0043.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0044.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0045.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0046.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0047.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0048.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0049.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0050.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0051.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0052.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0053.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0054.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0055.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0056.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0057.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0058.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0059.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0060.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0061.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0062.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0063.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "已保存: 'e:\\Courses\\multimedia\\public\\translated-02\\0064.jpg' (尺寸: 717x494 px, DPI: 100)\n",
-      "所有页面处理完成。\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "source = os.path.abspath(os.path.join('..', 'assets'))\n",
     "target = os.path.abspath(os.path.join('..', 'public'))\n",
     "\n",
-    "slides = ['merged/02.pdf', 'translated/02.pdf']\n",
+    "slides = [4, 5, 6, 9, 10]\n",
+    "pdf_files = flatten([\n",
+    "    ['merged/%02d.pdf' % slide, 'translated/%02d.pdf' % slide]\n",
+    "    for slide in slides\n",
+    "])\n",
+    "print(pdf_files)\n",
     "\n",
-    "for slide in slides:\n",
+    "for slide in pdf_files:\n",
     "    input_file = os.path.join(source, slide)\n",
     "    \n",
     "    folder_name = slide.replace('/', '-').replace('.pdf', '')\n",
@@ -175,6 +46,41 @@
     "        'left': 0.08,\n",
     "        'right': 0.08,\n",
     "    }, dpi=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SLIDE2X = '#slide2x([{page}], image(\"../public/merged-{slide0}/{page0}.jpg\"), image(\"../public/translated-{slide0}/{page0}.jpg\"))'\n",
+    "\n",
+    "for slide_id in slides:\n",
+    "    dir1 = 'merged-%02d' % slide_id\n",
+    "    dir2 = 'translated-%02d' % slide_id\n",
+    "    dir1_imgs = os.path.join(target, dir1.replace('.pdf', ''))\n",
+    "    dir2_imgs = os.path.join(target, dir2.replace('.pdf', ''))\n",
+    "    num = max(\n",
+    "        len(os.listdir(dir1_imgs)),\n",
+    "        len(os.listdir(dir2_imgs)),\n",
+    "    )\n",
+    "    print(slide_id, 'num:', num)\n",
+    "\n",
+    "    output = ''\n",
+    "    for i in range(1, num + 1):\n",
+    "        output += SLIDE2X.format(\n",
+    "            page=i,\n",
+    "            slide=slide_id,\n",
+    "            page0='%04d' % i,\n",
+    "            slide0='%02d' % slide_id,\n",
+    "        )\n",
+    "        output += '\\n\\n'\n",
+    "\n",
+    "    output_file = os.path.join('../public', '%02d.txt' % slide_id)\n",
+    "    with open(output_file, 'w+') as f:\n",
+    "        f.write(output)\n",
+    "        f.close()"
    ]
   }
  ],
